fixed problems with help size and IE recenter button text being offcenter

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,6 +21,7 @@ a#help {
   display: block;
   font-size: 0.65em;
   margin-top: 2px;
+  margin-right: 6px;
   color: #0000CB;
 }
 a#help:visited {
@@ -448,6 +449,9 @@ div.search {
   }
   input#filter {
     margin-right: 5px;
+  }
+  input#recenter {
+    width: auto;  /* fixes problem with text not being centered on IE */
   }
 }
 
